--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-CN">
 <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=gb2312">
-<title> DSM-Slide </title>
+<title> Jellyfin </title>
 </head>
 <frameset framespacing="0" border="0" rows="0" frameborder="0">
-<frame name="main" src="https://dsm.happyfamily.v6.rocks:5310/" scrolling="auto" noresize>
+<frame name="main" src="https://jellyfin.happyfamily.v6.rocks:5310/" scrolling="auto" noresize>
 </frameset>
 </html>
